--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.verticalText {
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+}
+
+.skills_carousel {
+    text-align: center;
+    margin: 3rem 0;
+}
+
+.carousel-container {
+    width: 80%;
+    margin: 0 auto;
+    position: relative;
+    color: var(--white-color);
+}
+
+.carousel-container .carousel-item-padding-40-px{
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.carousel-container svg {
+    width: 4rem;
+    height: 4rem;
+}
